Fix - sql console result data was displayed outside of the table when overflowing

--- a/src/scss/layout_sql_console.scss
+++ b/src/scss/layout_sql_console.scss
@@ -103,6 +103,8 @@
     }
 
     .p-tabview-panels {
+      padding-top: 0;
+      padding-bottom: 0;
       overflow: auto;
       flex-grow: 1;
       background-color: #272822;
